templates/elasticache-redis.cfn.yml
---
# Create an AWS ElastiCache Replication Group with Redis Engine based on parameters,
# along with an associated security group and subnet group.
# See links:
#   https://docs.aws.amazon.com/AmazonElastiCache/latest/red-ug/supported-engine-versions.html
#   https://docs.aws.amazon.com/AmazonElastiCache/latest/red-ug/WhatIs.Components.html
#

AWSTemplateFormatVersion: '2010-09-09'
Description: Create an ElastiCache Replication Group with Redis Engine

Parameters:

  EnvironmentName:
    Description: An environment name that will be prefixed to resource names.
    Type: String
    MaxLength: 30
    MinLength: 1
    AllowedPattern: ^[A-Za-z0-9]*$
    ConstraintDescription: Must contain only alphanumeric characters and numbers.

  AlertTopicARN:
    Description: The Alert Topic ARN.
    Type: String
    Default: ''

  VpcId:
    Description: The VPC ID.
    Type: AWS::EC2::VPC::Id

  DataSubnets:
    Description: The data subnets for Cache Node Instance
    Type: String

  ClientSecurityGroup:
    Description: The security group of client instance.
    Type: AWS::EC2::SecurityGroup::Id

  BastionSecurityGroup:
    Description: The security group of bastion instance.
    Type: AWS::EC2::SecurityGroup::Id
    Default: ''

  # See https://docs.aws.amazon.com/AmazonElastiCache/latest/UserGuide/CacheNodes.SelectSize.html
  CacheNodeType:
    Description: Cache node instance class, e.g. cache.t2.micro (free tier)
    Type: String
    AllowedValues:
      - cache.t2.micro
      - cache.t2.small
      - cache.t2.medium
      - cache.m4.large
      - cache.m4.xlarge
      - cache.m4.2xlarge
      - cache.m4.4xlarge
      - cache.m4.10xlarge
      - cache.r4.large
      - cache.r4.xlarge
      - cache.r4.2xlarge
      - cache.r4.4xlarge
      - cache.r4.8xlarge
      - cache.r4.16xlarge
    Default: cache.t2.micro
    ConstraintDescription: Node instance class not supported.

  NumCacheNodes:
    Description: The number of cache nodes.
    Type: Number
    MinValue: 1
    MaxValue: 5
    Default: 2
    ConstraintDescription: The number of nodes on group must be between 1 and 5.

  AutoMinorVersionUpgrade:
    Description: Whether or not minor version upgrades to the cache engine should be applied automatically during the maintenance window.
    Type: String
    AllowedValues: [true, false]
    Default: true

Conditions:

  HasAlertTopic: !Not [!Equals [!Ref AlertTopicARN, '']]
  HasBastionSG: !Not [!Equals [!Ref BastionSecurityGroup, '']]
  IsAutomaticFailoverSupported:
    Fn::And:
      - !Not [!Equals [!Select [1, !Split ['.', !Ref CacheNodeType]], 't1']]
      - !Not [!Equals [!Select [1, !Split ['.', !Ref CacheNodeType]], 't2']]
  IsAutomaticFailoverEnabled:
    Fn::And:
      - !Condition IsAutomaticFailoverSupported
      - !Not [!Equals [!Ref NumCacheNodes, 1]]

Resources:

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ElastiCache Security Group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          ToPort: 6379
          FromPort: 6379
          SourceSecurityGroupId: !Ref ClientSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-CacheSecurityGroup

  BastionToSecurityGroupIngress:
    Condition: HasBastionSG
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref SecurityGroup
      IpProtocol: tcp
      ToPort: 6379
      FromPort: 6379
      SourceSecurityGroupId: !Ref BastionSecurityGroup

  SubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      Description: Cache Subnet Group
      SubnetIds: !Split [',', !Ref DataSubnets]

  CacheParameterGroup:
    Type: AWS::ElastiCache::ParameterGroup
    Properties:
      Description: Cache Parameter Group
      CacheParameterGroupFamily: 'redis3.2'
      Properties: {}

  ReplicationGroup:
    Type: AWS::ElastiCache::ReplicationGroup
    Properties:
      ReplicationGroupDescription: A redis replication group
      AtRestEncryptionEnabled: false
      TransitEncryptionEnabled: false
      AutomaticFailoverEnabled: !If [IsAutomaticFailoverEnabled, true, false]
      AutoMinorVersionUpgrade: !Ref AutoMinorVersionUpgrade
      CacheNodeType: !Ref CacheNodeType
      CacheSubnetGroupName: !Ref SubnetGroup
      CacheParameterGroupName: !Ref CacheParameterGroup
      SecurityGroupIds:
        - !Ref SecurityGroup
      NotificationTopicArn: !If [HasAlertTopic, !Ref AlertTopicARN, !Ref 'AWS::NoValue']
      Engine: redis
      EngineVersion: '3.2.10'
      Port: 6379
      NumCacheClusters: !Ref NumCacheNodes
      PreferredMaintenanceWindow: 'wed:19:11-wed:20:41'
      # SnapshotRetentionLimit: 5
      # SnapshotWindow: '18:24-18:54'
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-ReplicationGroup

Outputs:

  StackName:
    Description: Stack Name
    Value: !Sub ${AWS::StackName}

  ReplicationGroupID:
    Description: The replication group ID
    Value: !Ref ReplicationGroup

  DNSName:
    Description: The DNS address of the primary read-write cache node.
    Value: !GetAtt ReplicationGroup.PrimaryEndPoint.Address
